--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,3 +1,12 @@
 # all properties please see: https://github.com/actframework/archetype-support/blob/act-archetype-support-1.8.7.0/src/main/resources/archetype-resources/src/main/resources/conf/app.properties
 http.port=8080
 url.context=/demo
+oauth.qq.client-id=10*******85
+oauth.qq.client-secret=1f7d0*********************3cc2d629e
+oauth.qq.redirect-uri=http://oauth.xkcoding.com/demo/oauth/qq/callback
+oauth.github.client-id=2d2**************d5f01086
+oauth.github.client-secret=5a291************************7871306d1
+oauth.github.redirect-uri=http://oauth.xkcoding.com/demo/oauth/github/callback
+oauth.mi.client-id=28823**************2994
+oauth.mi.client-secret=nFeT*****************
+oauth.mi.redirect-uri=http://oauth.xkcoding.com/demo/oauth/mi/callback
