--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
     <!--JustAuth版本-->
-    <justauth.version>1.9.2-SNAPSHOT</justauth.version>
+    <justauth.version>1.9.5</justauth.version>
   </properties>
 
   <dependencies>
